--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,14 +1,28 @@
 .skills{
     background-image: var(--thirt-gradient);
+  text-align: right;
 }
 .skills__container{
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 70px;
+    /* grid-template-columns: repeat(3, 1fr);
+    row-gap: 70px; */
+    display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 30px;
 }
-.skills__titles,
+.skills__item {
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+  }
+  .skills__icon {
+    font-size: 3em; /* Set a larger font size for icons */
+    margin-bottom: 10px; /* Add spacing between icon and text */
+  }
+  
+/* .skills__titles,
 .skills__description{
     padding-inline: 30px;
-}
+} */
 .skills__titles{
     display: flex;
     justify-content: space-between;
@@ -17,6 +31,7 @@
 }
 .skills__name{
     font-size: var(--largest-font-size);
+    margin-bottom: 5px;
 }
 
 .skills__number{
@@ -36,12 +51,18 @@
 }
 .skills__bar{
     background: rgba(255, 255, 255, 0.2);
+  height: 5px;
+  border-radius: 5px;
+  overflow: hidden;
 }
 .skills__percentage{
     display: block;
-    /* background-color: var(--primary-color); */
-    background-color: pink;
-    position: relative;
+    background-color: var(--primary-color);
+    /* position: relative; */
+    height: 100%;
+  width: 0; 
+  border-radius: 5px;
+  transition: width 1s ease-in-out;
 
 }
 .skills__percentage span{
@@ -55,4 +76,25 @@
     right: 0;
     top: -12px;
     
+    display: inline-block;
+    /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); Add a subtle box shadow */
+    /* top: -7px; */
+    transition: right 1s ease-in-out;
 }
+
+/* .animate .skills__percentage {
+    width: 0;
+  }
+  
+  .animate .skills__percentage span {
+    right: -15px;
+  }
+
+
+  .skills__item:hover .skills__percentage {
+    width: 100%;
+  }
+  
+  .skills__item:hover .skills__percentage span {
+    right: calc(100% - 15px);
+  } */
