--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -3,6 +3,7 @@
 }
 .resume__container{
     grid-template-columns: repeat(2, 1fr);
+    padding: 0 50px;
 }
 .resume__heading{
     text-align: center;
@@ -18,9 +19,10 @@
 }
 .resume__item{
     position: relative;
+    
 }
 .resume__header{
-    padding: 32px 30px;
+    padding: 32px 5px;
 }
 .resume__subtitle{
     font-size: var(--largest-font-size);
@@ -58,16 +60,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: var(--border-color);
 }
 .resume__title{
     font-family: var(--second-font);
     font-size: var(--h3-font-size);
+    color: var(--border-color);
+    
 }
 .resume_date{
     color: var(--title-color);
     font-size: var(--tiny-font-size);
     font-weight: 700;
+    color: var(--border-color);
 }
 .resume__description{
     margin-block: 20px 30px;
+    color: var(--border-color);
 }
