--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -3,16 +3,46 @@
   text-align: right;
 }
 .skills__container{
-    /* grid-template-columns: repeat(3, 1fr);
-    row-gap: 70px; */
     display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 30px;
+  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+  grid-template-columns: repeat(4,  minmax(150px, 1fr)); /* Default to 4 columns */
+  gap: 50px;
+  padding: 0 50px;
+}
+/* Media Queries for Responsive Design */
+@media (max-width: 1200px) {
+  .skills__container {
+    grid-template-columns: repeat(3, minmax(150px, 1fr)); /* 3 columns on medium screens */
+  }
+}
+
+@media (max-width: 900px) {
+  .skills__container {
+    grid-template-columns: repeat(2, minmax(150px, 1fr)); /* 2 columns on smaller screens */
+  }
+}
+
+@media (max-width: 600px) {
+  .skills__container {
+    grid-template-columns: 1fr; /* 1 column on very small screens */
+  }
 }
 .skills__item {
+  
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); Add a subtle box shadow */
+    box-shadow: 0 4px 8px var(--container-color);
+  }
+  .skills__item:hover {
+    background-color: var(--secondary-color);
+    /* transition: background-color 0.7s ease, box-shadow 0.7s ease; */
+    transition: background-color 0.7s ease, box-shadow 0.7s ease, transform 0.7s ease, filter 0.7s ease;
+
+    box-shadow: 0 4px 8px var(--primary-color);
+    transform: scale(1.05) ;
+    filter: brightness(1.1);
+    
   }
   .skills__icon {
     font-size: 3em; /* Set a larger font size for icons */
@@ -55,6 +85,7 @@
   border-radius: 5px;
   overflow: hidden;
 }
+
 .skills__percentage{
     display: block;
     background-color: var(--primary-color);
@@ -62,39 +93,19 @@
     height: 100%;
   width: 0; 
   border-radius: 5px;
-  transition: width 1s ease-in-out;
+  transition: width 0.7s ease-in-out;
 
 }
 .skills__percentage span{
     background-color: var(--container-color);
     border: 2px solid var(--border-color);
-    box-shadow: var(--shadow);
+    box-shadow: 0 0 5px var(--shadow);
     width: 25px;
     height: 25px;
     border-radius: 50%;
     position: absolute;
     right: 0;
     top: -12px;
-    
     display: inline-block;
-    /* box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); Add a subtle box shadow */
-    /* top: -7px; */
-    transition: right 1s ease-in-out;
+    transition: right 2s ease-in-out;
 }
-
-/* .animate .skills__percentage {
-    width: 0;
-  }
-  
-  .animate .skills__percentage span {
-    right: -15px;
-  }
-
-
-  .skills__item:hover .skills__percentage {
-    width: 100%;
-  }
-  
-  .skills__item:hover .skills__percentage span {
-    right: calc(100% - 15px);
-  } */
