--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,26 +1,28 @@
-.home{
+.home {
     background-image: var(--first-gradient);
     padding-bottom: 180px;
 }
-.home__wrapper{
+
+.home__wrapper {
     min-height: 100vh;
     display: grid;
     align-items: center;
     margin-left: 20px;
 }
-.home__container{
+
+.home__container {
     width: 100%;
-    /* background-color: var(--primary-color); */
     position: relative;
     margin-top: 50px;
 }
+
 .home__subtitle,
-.home__job{
+.home__job {
     font-weight: 700;
 }
+
 .home__subtitle,
 .home__job span {
-    /* font-size: var(--small-font-size); */
     color: var(--title-color);
 }
 
@@ -32,47 +34,50 @@
 .home__job b {
     font-family: var(--second-font);
     font-size: var(--h2-font-size);
-    /* font-size:  var(--large-font-size); */
     margin-left: 10px;
     display: inline-block;
 }
 
-.home__title{
-    /* font-size: var(--biggest-font-size); */
+.home__title {
     text-shadow: 2px 2px hsl(0 0% 0%), -2px 2px hsl(0,0%,0%), 2px -2px hsl(0,0%,0%), -2px -2px hsl(o, 0%, 0%), 5px 5px 0 rgb(0 0 0 / 20%);
     line-height: 1.2;
     margin-top: 15px;
 }
-.home__text{
+
+.home__text {
     font-size: var(--large-font-size);
     margin-block: 40px 28px;
     max-width: 520px;
 }
 
-.home__socials{
+.home__socials {
     display: flex;
     column-gap: 20px;
     margin-bottom: 30px;
+    /* position: relative; */
 }
 
-.home__social-link{
+.home__social-link {
     color: var(--title-color);
     font-size: var(--h5-font-size);
     transition: all 0.7s var(--transition);
 }
-.home__social-link:hover{
-    color: var(--primary-color);
 
+.home__social-link:hover {
+    color: var(--primary-color);
 }
-.home__btns{
+
+.home__btns {
     display: flex;
     column-gap: 70px;
 }
-.hero__link:hover{
+
+.hero__link:hover {
     color: var(--primary-color);
     transition: all 0.7s var(--transition);
 }
-.hero__link::before{
+
+.hero__link::before {
     content: '';
     position: absolute;
     top: 50%;
@@ -83,67 +88,41 @@
     background-color: var(--border-color);
 }
 
-.home__img-wrapper{
+.home__img-wrapper {
+    /* position: relative; */
     position: absolute;
     top: 0;
     margin-top: 5%;
-    /* left: 622px; */
     right: 12px;
-    /* width: 100%; */
     transform: translateY(-9%);
     width: 60%;
-    /* max-width: 680px; */
     max-width: 380px;
     margin-right: 112px;
 }
-.home__banner{
+
+.home__banner {
     background-color: var(--primary-color);
     padding-bottom: 100%;
     border-radius: 50%;
     position: relative;
     z-index: 1;
-    /* overflow: hidden; */
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
-/* .home__banner::before,
-.home__banner::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px; 
-    top: 50%;
-    left: 0;
-    transform-origin: top center;
-    transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
-} */
-/* .home__banner::after {
-    top: auto;
-    bottom: 0;
-    transform-origin: bottom center;
-} */
 
-.home__profile{
+.home__profile {
     position: absolute;
-    /* top: 0; */
     bottom: 0;
     right: 1px;
-    /* bottom: 0; */
     height: 400px;
     border-radius: 500px;
-    /* height: 800px; */
-    /* margin-left: 500px; */
     object-fit: cover;
 }
+
 .home__banner:hover {
-    /* transform: scale(1.1); */
-    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.307); /* Adding a subtle box-shadow */
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.307);
 }
-/* .home__banner:hover::before,
-.home__banner:hover::after {
-    transform: scaleX(1);
-} */
-.home__data{
+
+.home__data {
     border: 2px solid var(--border-color);
     background: var(--container-color);
     box-shadow: var(--shadow);
@@ -156,71 +135,273 @@
     position: absolute;
     z-index: 1;
 }
-.home__data-one{
+
+.home__data-one {
     bottom: 20%;
-    /* left: -6%; */
     left: -4%;
-    
 }
-.home__data-two{
+
+.home__data-two {
     bottom: 12%;
-    /* left: 66%;
-    bottom: 4%; */
     right: 6%;
 }
 
 .home__data .text-lg,
-.home__data .text-sm{
+.home__data .text-sm {
     width: 50%;
     color: var(--title-color);
     font-weight: 700;
 }
-.home__data .text-lg{
+
+.home__data .text-lg {
     text-align: center;
     font-size: 37px;
 }
-.home__data .text-sm{
+
+.home__data .text-sm {
     font-size: 13px;
     line-height: 1.5em;
 }
+
 .home__data .text-lg b,
-.home__data .text-sm span{
+.home__data .text-sm span {
     color: var(--primary-color);
 }
-.home__data .tect-lg b{
+
+.home__data .tect-lg b {
     position: relative;
     top: -4px;
 }
-.shape__1{
+
+.shape__1 {
     width: 226px;
     height: 226px;
     top: 10%;
     right: -10%;
 }
+
 .shape__2,
-.shape__3{
+.shape__3 {
     width: 141px;
     height: 141px;
 }
-.shape__2{
+
+.shape__2 {
     bottom: 45%;
     left: 75%;
 }
-.shape__3{
+
+.shape__3 {
     bottom: 0;
     left: -2px;
 }
 
 .typewriter-text {
-    font-size: 54px; /* Set your desired font size here */
-    /* Add any additional styling you want */
-  }
+    font-size: 54px;
+}
 
 .zoom-text {
     display: inline-block;
-    transition: transform 0.3s ease; /* Smooth transition */
+    transition: transform 0.3s ease;
 }
 
 .text-cs:hover .zoom-text {
-    transform: scale(1.1); /* Zoom in by 10% */
+    transform: scale(1.1);
+}
+
+/* Media Queries for Responsive Design */
+
+@media (max-width: 1024px) {
+    .home {
+        padding-bottom: 100px;
+    }
+
+    .home__wrapper {
+        margin-left: 10px;
+    }
+
+    .home__img-wrapper {
+        position: relative;
+
+        width: 50%;
+        max-width: 300px;
+        margin-right: 0;
+        right: 5px;
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+        /* margin: 70px auto; */
+        justify-content: center;
+        align-items: center;
+        transform: translateY(0);
+    }
+
+    .home__banner {
+        padding-bottom: 80%;
+    }
+
+    .home__profile {
+        height: 300px;
+    }
+
+    .home__data {
+        width: 200px;
+        height: 50px;
+    }
+
+    .home__data .text-lg {
+        font-size: 30px;
+    }
+
+    .home__data .text-sm {
+        font-size: 11px;
+    }
+
+    .home__data-one {
+        bottom: 18%;
+        left: -2%;
+    }
+
+    .home__data-two {
+        bottom: 10%;
+        right: 4%;
+    }
+}
+
+@media (max-width: 768px) {
+    .home__title {
+        font-size: var(--h2-font-size);
+    }
+
+    .home__text {
+        font-size: var(--normal-font-size);
+        margin-block: 30px 20px;
+        max-width: 400px;
+    }
+
+    .home__social-link {
+        font-size: var(--h6-font-size);
+    }
+
+    .home__btns {
+        flex-direction: column;
+        row-gap: 20px;
+        column-gap: 0;
+    }
+
+    .home__img-wrapper {
+        width: 70%;
+        max-width: 250px;
+        /* right: 0; */
+    }
+
+    .home__banner {
+        padding-bottom: 70%;
+    }
+
+    .home__profile {
+        height: 250px;
+    }
+
+    .home__data {
+        width: 180px;
+        height: 45px;
+    }
+
+    .home__data .text-lg {
+        font-size: 25px;
+    }
+
+    .home__data .text-sm {
+        font-size: 10px;
+    }
+
+    .home__data-one {
+        bottom: 15%;
+        left: -1%;
+    }
+
+    .home__data-two {
+        bottom: 8%;
+        right: 3%;
+    }
+}
+
+@media (max-width: 480px) {
+    .home {
+        padding-bottom: 50px;
+    }
+
+    .home__wrapper {
+        margin-left: 5px;
+        text-align: center;
+    }
+
+    .home__container {
+        margin-top: 80px;
+    }
+
+    .home__title {
+        font-size: var(--h3-font-size);
+    }
+
+    .home__text {
+        font-size: var(--small-font-size);
+        margin-block: 20px 15px;
+        max-width: 90%;
+    }
+
+    .home__socials {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .home__social-link {
+        font-size: var(--h7-font-size);
+    }
+
+    .home__btns {
+        flex-direction: column;
+        row-gap: 15px;
+        column-gap: 0;
+    }
+
+    .home__img-wrapper {
+        position: relative;
+        width: 100%;
+        max-width: 200px;
+        justify-content: center;
+        align-items: center;
+        transform: translateY(0);
+        margin-top: 5rem;
+        margin: 70px auto;
+    }
+
+
+    .home__profile {
+        height: 200px;
+    }
+
+    .home__data {
+        width: 150px;
+        height: 40px;
+        padding-inline: 10px;
+    }
+
+    .home__data .text-lg {
+        font-size: 20px;
+    }
+
+    .home__data .text-sm {
+        font-size: 9px;
+    }
+
+    .home__data-one {
+        bottom: 10%;
+        left: 0;
+    }
+
+    .home__data-two {
+        bottom: 5%;
+        right: 2%;
+    }
 }
