--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,5 +1,7 @@
 .portfolio{
     background-image: var(--first-gradient);
+    margin-left: 30px;
+    margin-right: 30px;
 }
 .portfolio__list{
     display: flex;
@@ -43,13 +45,14 @@
     display: block;
     width: 40px;
 }
-/* .portfolio__list-item:hover::before{
-    width: 40px;
-} */
 
 .portfolio__container{
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 40px;
+    gap: 60px;
+    /* height: 140rem; */
+
+    
 }
 .portfolio__img-wrapper{
     border-radius: 18px;
@@ -76,6 +79,7 @@
 .portfolio__category,
 .portfolio__description{
     margin-top: 30px;
+    margin-bottom: 35px;
 }
 .portfolio__title{
     font-size: var(--h4-font-size);
@@ -84,9 +88,117 @@
     min-height: 190px;
 }
 
-.project__link{
+/* .project__link{
     margin-top: 7%;
-}
+} */
 .project__link:hover{
     color: var(--primary-color);
+}
+.portfolio__items {
+    position: relative;
+    margin-bottom: 20px;
+}
+  .links-container{ 
+    position: absolute;
+    bottom: 30px; 
+    left: 30px; 
+    right: 0; 
+    display: flex;
+    justify-content: flex-start; 
+  }
+  .link {
+    margin-right: 10px; 
+  }
+  
+  .separator {
+    margin: 0 5px;
+    bottom: 60px;
+  }
+  /* Media Queries for Responsive Design */
+
+@media (max-width: 1024px) {
+    .portfolio {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .portfolio__container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+}
+
+@media (max-width: 768px) {
+    .portfolio {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .portfolio__list {
+        flex-direction: column;
+        align-items: center;
+        column-gap: 20px;
+    }
+
+    .portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 30px;
+    }
+
+    .portfolio__img {
+        height: 200px;
+    }
+}
+
+@media (max-width: 480px) {
+    .portfolio {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .portfolio__list {
+        flex-direction: column;
+        align-items: center;
+        column-gap: 10px;
+    }
+
+    .portfolio__list-item {
+        font-size: var(--small-font-size);
+    }
+
+    .portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .portfolio__img {
+        height: 180px;
+    }
+
+    .portfolio__category,
+    .portfolio__description {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+
+    .portfolio__title {
+        font-size: var(--h5-font-size);
+    }
+
+    .portfolio__description {
+        min-height: 150px;
+    }
+
+    .links-container {
+        position: static;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 10px;
+    }
+
+    .link {
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
 }
